--- a/form_validation.html
+++ b/form_validation.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form Validation</title>
+</head>
+
+
+<body>
+
+    <form action="https://formsubmit.co/olebogeng.jacobs@gmail.com" method="post">
+
+        <h1>Registration Form</h1>
+        <div>
+            <label for="name">User id</label>
+            <Input type="text" name="name" id="name" required>
+        </div>
+<br>
+        <div>
+            <label for="name">Password</label>
+            <Input type="text" name="name" id="name" required>
+        </div> 
+        <br>
+
+        <div>
+            <label for="name">Name</label>
+            <input type="text" name=name id="name" required>
+        </div>
+        <br>
+        <div>
+            <label for="name">address</label>
+            <Input type="text" name="name" id="name" required>
+        </div>
+        <br>
+
+        <div>
+            <label for="name">Country</label>
+            <Input type="text" name="name" id="name" required>
+        </div>
+
+        <div>
+            <label for="name">ZIP Code</label>
+            <Input type="text" name="name" id="name" required>
+        </div>
+
+        <div>
+            <label for="name">Email</label>
+            <Input type="text" name="name" id="name" required>
+        </div>
+
+    </form>
+
+</body>
+
+</html>
