--- a/form_validation.html
+++ b/form_validation.html
@@ -50,7 +50,11 @@
             <label for="name">Email</label>
             <Input type="text" name="name" id="name" required>
         </div>
-
+<div>
+    
+    <h2>Sex</h2> <input type="radio" name="Sex">Male 
+    <input type="radio" name="Sex"checked="Checked" required>Female
+</div>
     </form>
 
 </body>
